--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.3.4",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
