--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
             "jsx": true,
             "spread": true,
             "experimentalObjectRestSpread": true
-        }
+        },
+        "experimentalDecorators": true
     }
 }
